--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.1.7",
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.3.0",
@@ -47,6 +48,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
